# cndrvcups-common

./: LICENSE-common-2.40DE.txt  LICENSE-common-2.40E.txt  LICENSE-common-2.40FR.txt  LICENSE-common-2.40IT.txt  LICENSE-common-2.40J.txt  LICENSE-common-2.40SP.txt  Makefile  cndrvcups-common.spec
buftool/: buflist.c  buflist.h  buftool.c  buftool.h
c3plmod_ipc/ipclib/: opvp.h  opvp_02.h  opvp_common.h  opvp_driver.h
cngplp/: configure.in
cngplp/cnjatool/: main.c
cngplp/po/: cngplp.pot  de.po  es.po  fr.po  it.po  ja.po
cngplp/src/: Makefile.am  load.c  load.h  main.c  mainwnd.c  mainwnd.h  printerinfo.c  printerinfo.h
data/: CNZSRGBC.ICC
debian/: changelog  control  copyright  docs  rules
libs/: c3pldrv  libcaepcm.so.1.0
